--- a/package.json
+++ b/package.json
@@ -13,11 +13,24 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@unform/web": "^2.1.6",
+    "axios": "^1.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.7.1",
+    "styled-components": "^5.3.6",
+    "swr": "^2.0.3",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "@types/styled-components": "^5.1.26",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2"
   }
 }
