Create layout components

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "@types/styled-components": "^5.1.26",
+    "fs": "^0.0.1-security",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2"
   }
