--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "styled-components": "^5.3.6",
     "swr": "^2.0.3",
     "typescript": "^4.9.5"
@@ -29,6 +30,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "fs": "^0.0.1-security",
     "jest": "^29.4.2",
