--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-modal": "^3.16.1",
     "styled-components": "^5.3.6",
     "swr": "^2.0.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
