--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "js-cookie": "^3.0.1",
     "json-server": "^0.17.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +37,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "fs": "^0.0.1-security",
