--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jose": "^4.12.0",
     "js-cookie": "^3.0.1",
     "json-server": "^0.17.1",
     "jsonwebtoken": "^8.5.1",
